--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
 <link rel="stylesheet" type="text/css" href="styles/main_styles.css">
 <link rel="stylesheet" type="text/css" href="styles/responsive.css">
+<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 </head>
 
 <body>
@@ -37,7 +38,6 @@
 					<ul class="main_nav_list">
 						<li class="main_nav_item"><a href="index.html">home</a></li>
 						<li class="main_nav_item"><a href="courses.html">courses</a></li>
-						<li class="main_nav_item"><a href="news.html">news</a></li>
 						<li class="main_nav_item"><a href="contact.html">contact</a></li>
 					</ul>
 				</div>
@@ -69,7 +69,6 @@
 				<ul class="menu_list menu_mm">
 					<li class="menu_item menu_mm"><a href="index.html">Home</a></li>
 					<li class="menu_item menu_mm"><a href="courses.html">Courses</a></li>
-					<li class="menu_item menu_mm"><a href="news.html">News</a></li>
 					<li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
 				</ul>
 
@@ -490,7 +489,6 @@
 							<ul>
 								<li class="footer_list_item"><a href="#">Home</a></li>
 								<li class="footer_list_item"><a href="courses.html">Courses</a></li>
-								<li class="footer_list_item"><a href="news.html">News</a></li>
 								<li class="footer_list_item"><a href="contact.html">Contact</a></li>
 							</ul>
 						</div>
