--- a/material.html
+++ b/material.html
@@ -10,6 +10,7 @@
 <link href="plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="styles/courses_styles.css">
 <link rel="stylesheet" type="text/css" href="styles/courses_responsive.css">
+<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 </head>
 <body>
 
