--- a/index.html
+++ b/index.html
@@ -389,8 +389,19 @@
 	</div>
 	<!-- Register -->
 
+
 	<div class="register">
 
+			<div class="container">
+					<div class="row">
+						<div class="col">
+							<div class="section_title text-center">
+								<h1>Vision And Mission</h1>
+							</div>
+						</div>
+					</div>
+<br>
+<br>
 		<div class="container-fluid">
 			
 			<div class="row row-eq-height">
@@ -398,13 +409,8 @@
 					
 					<!-- Register -->
 
-					<div class="register_section d-flex flex-column align-items-center justify-content-center">
-						<div class="register_content text-center">
-							<h1 class="register_title">New Batches starting from <span>25th </span> March 2019</h1>
-							<p class="register_text">Register early and book your seats in our programs for the coming year.</p>
-							<div class="button button_1 register_button mx-auto trans_200"><a href="contact.html">contact now</a></div>
-						</div>
-					</div>
+					
+								<iframe width="100%" height="400" src="https://www.youtube.com/embed/tOeez6FBWHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 				</div>
 
