--- a/contact.html
+++ b/contact.html
@@ -154,17 +154,25 @@
 			</div>
 
 			<!-- Google Map -->
-
-			<!-- <div class="row">
-				<div class="col-md-12">
+			<div class="container">
+			<div class="row">
+				<div class="col-xs-4">
 					<div id="google_map">
-						<div class="mapouter"><div class="gmap_canvas"><iframe width="757" height="465" id="gmap_canvas" src="https://maps.google.com/maps?q=Harikashi%20Nagar%2C%20Gondia%20441601(MH)&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{text-align:right;height:465px;width:1000px;}.gmap_canvas {overflow:hidden;background:none!important;height:465px;width:1000px;}</style></div>
+						<div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=Harikashi%20Nagar%2C%20Gondia%20441601(MH)&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{text-align:right;height:300px;width:300px}.gmap_canvas {overflow:hidden;background:none!important;height:300px;}</style></div>
 				</div>
-			</div>
 
-		</div> -->
+			</div>
+			<div class="col-xs-8">
+				<br><br><br><br>
+			</div>
+		</div>
+			
+
+		</div>
 	</div>
 <br>
+
+
 	<!-- Footer -->
 
 	<footer class="footer">
