--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						<li class="main_nav_item"><a href="index.html">home</a></li>
 						<li class="main_nav_item"><a href="courses.html">courses</a></li>
 						<li class="main_nav_item"><a href="contact.html">contact</a></li>
+						<li class="main_nav_item"><a href="gallery.html">gallery</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -70,6 +71,7 @@
 					<li class="menu_item menu_mm"><a href="index.html">Home</a></li>
 					<li class="menu_item menu_mm"><a href="courses.html">Courses</a></li>
 					<li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
+					<li class="menu_item menu_mm"><a href="gallery.html">Gallery</a></li>
 				</ul>
 
 				<!-- Menu Social -->
@@ -496,6 +498,7 @@
 								<li class="footer_list_item"><a href="#">Home</a></li>
 								<li class="footer_list_item"><a href="courses.html">Courses</a></li>
 								<li class="footer_list_item"><a href="contact.html">Contact</a></li>
+								<li class="footer_list_item"><a href="gallery.html">Gallery</a></li>
 							</ul>
 						</div>
 					</div>
@@ -506,11 +509,8 @@
 						<div class="footer_column_title">Useful Links</div>
 						<div class="footer_column_content">
 							<ul>
-								<li class="footer_list_item"><a href="#">Testimonials</a></li>
-								<li class="footer_list_item"><a href="#">FAQ</a></li>
-								<li class="footer_list_item"><a href="#">Community</a></li>
-								<li class="footer_list_item"><a href="#">Campus Pictures</a></li>
-								<li class="footer_list_item"><a href="#">Tuitions</a></li>
+								<li class="footer_list_item"><a href="https://www.youtube.com/channel/UCltpRk9pkOTkG-jwupjK3Wg">Our Youtube Channel</a></li>
+								<li class="footer_list_item"><a href="gallery.html">Campus Pictures</a></li>
 							</ul>
 						</div>
 					</div>
