--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							<img src="images/books.svg" class="svg" alt="">
 							<div class="hero_box_content">
 								<h2 class="hero_box_title">Our Study Material</h2>
-								<a href="#" class="hero_box_link">view more</a>
+								<a href="material.html" class="hero_box_link">view more</a>
 							</div>
 						</div>
 					</div>
@@ -457,10 +457,10 @@
 				<div class="row">
 					<div class="col text-center">
 						<div class="newsletter_form_container mx-auto">
-							<form action="post">
+							<form name="newsletter" method="post" data-netlify="true">
 								<div class="newsletter_form d-flex flex-md-row flex-column flex-xs-column align-items-center justify-content-center">
-									<input id="newsletter_email" class="newsletter_email" type="email" placeholder="Email Address" required="required" data-error="Valid email is required.">
-									<button id="newsletter_submit" type="submit" class="newsletter_submit_btn trans_300" value="Submit">Subscribe</button>
+									<input id="newsletter_email" class="newsletter_email" type="email" name="email" placeholder="Email Address" required="required" data-error="Valid email is required.">
+									<button id="newsletter_submit" type="submit" class="newsletter_submit_btn trans_300">Subscribe</button>
 								</div>
 							</form>
 						</div>
