--- a/material.html
+++ b/material.html
@@ -87,10 +87,10 @@
 				</div>
 			</nav>
 		</div>
-		<div class="header_side d-flex flex-row justify-content-center align-items-center">
+		<!-- <div class="header_side d-flex flex-row justify-content-center align-items-center">
 			<img src="images/phone-call.svg" alt="">
-			<span>+43 4566 7788 2457</span>
-		</div>
+			<span>+91 73876 45101</span>
+		</div> -->
 
 		<!-- Hamburger -->
 		<div class="hamburger_container">
@@ -142,7 +142,7 @@
 			<div class="home_background prlx" style="background-image:url(images/course.jpg)"></div>
 		</div>
 		<div class="home_content">
-			<h1>Study Material</h1>
+			<h1>Material</h1>
 		</div>
 	</div>
 
