--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 <link rel="stylesheet" type="text/css" href="styles/main_styles.css">
 <link rel="stylesheet" type="text/css" href="styles/responsive.css">
 <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5388351112069391",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 
 <body>
