--- a/index.html
+++ b/index.html
@@ -85,11 +85,9 @@
 				
 				<div class="menu_social_container menu_mm">
 					<ul class="menu_social menu_mm">
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-pinterest"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-instagram"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-twitter"></i></a></li>
+						<li class="menu_social_item menu_mm"><a href="https://www.instagram.com/milifeclasses1/?hl=en"><i class="fab fa-instagram"></i></a></li>
+						<li class="menu_social_item menu_mm"><a href="https://m.facebook.com/milifeclasses1/"><i class="fab fa-facebook-f"></i></a></li>
+						<li class="menu_social_item menu_mm"><a href="https://www.youtube.com/channel/UCltpRk9pkOTkG-jwupjK3Wg"><i class="fab fa-youtube"></i></a></li>
 					</ul>
 				</div>
 
@@ -247,7 +245,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title text-center">
-						<h1>Upcoming Events</h1>
+						<h1>Recent Activities</h1>
 					</div>
 				</div>
 			</div>
